force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/Apttus_Config2__ConfigSystemProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration &amp; Pricing System properties. The record should be named as "System Properties".</description>
    <label>Config System Properties</label>
</CustomObject>