force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ConstraintRuleExecutionMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConstraintRuleExecutionMode__c</fullName>
    <description>Mode which Constraint Rules will execute.</description>
    <label>Constraint Rule Execution Mode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>