force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DisableSOSLTextSearch__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisableSOSLTextSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to disable SOSL catalog search. When disabled, system uses SOQL catalog search.</description>
    <inlineHelpText>Indicator to disable SOSL catalog search. When disabled, system uses SOQL catalog search.</inlineHelpText>
    <label>DisableSOSLTextSearch</label>
    <type>Checkbox</type>
</CustomField>