force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ProductTotalingHierarchy__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductTotalingHierarchy__c</fullName>
    <description>Enter the list of product fields that represent the product totaling hierarchy. Each product field name should be separated by a new line. For Ad-hoc totaling enter the line item fields which represent a totaling group</description>
    <inlineHelpText>Enter the list of product fields that represent the product totaling hierarchy. Each product field name should be separated by a new line. For Ad-hoc totaling enter the line item fields which represent a totaling group</inlineHelpText>
    <label>Adhoc/Product Totaling Hierarchy</label>
    <type>TextArea</type>
</CustomField>